--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 
     .modal{position:fixed;inset:0;background:rgba(0,0,0,.72);backdrop-filter:blur(6px);display:flex;align-items:center;justify-content:center;z-index:9999;padding:18px}
     .modal.hidden{display:none}
-    .modalBox{--mw:min(860px,88vw);width:var(--mw);max-height:84vh;background:#0b1122;border:1px solid var(--line);border-radius:16px;overflow:hidden}
+    .modalBox{--mw:min(860px,88vw);width:var(--mw);max-height:90dvh;background:#0b1122;border:1px solid var(--line);border-radius:16px;overflow:hidden}
     .modalTop{display:flex;justify-content:space-between;align-items:center;padding:10px 12px;background:#0f1730;border-bottom:1px solid var(--line)}
     .modalTitle{font-size:14px;font-weight:800;color:#dce8ff;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;padding-right:10px}
     .closeBtn{appearance:none;border:1px solid var(--line);background:#131f40;color:#dbe7ff;border-radius:10px;padding:7px 11px;font-weight:800;cursor:pointer}
-    .player{width:100%;height:min(calc(var(--mw) * 9 / 16),calc(84vh - 52px));background:#000}
+    .player{width:100%;height:min(calc(var(--mw) * 9 / 16),calc(90dvh - 52px));background:#000}
     .player iframe{width:100%;height:100%;border:0;display:block}
 
     @media (max-width:980px){
