Make header non-sticky and improve thumbnail quality with fallback

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     }
 
     .top-menu {
-      position: fixed;
+      position: absolute;
       top: 24px;
       right: 24px;
       z-index: 1000;
@@ -84,7 +84,7 @@
     }
 
     .top-logo {
-      position: fixed;
+      position: absolute;
       top: 24px;
       left: 24px;
       z-index: 1000;
@@ -688,22 +688,22 @@
       <div class="rail-wrap">
         <p class="rail-label">WHEEL INTERACTION ZONE</p>
         <div class="rail" id="wheelRail">
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/erSvdgjX02g/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/erSvdgjX02g/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/erSvdgjX02g/hqdefault.jpg'" alt="">
             <p>Steakhouse</p>
           </div>
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/KdrK-sQb8-Y/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/KdrK-sQb8-Y/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/KdrK-sQb8-Y/hqdefault.jpg'" alt="">
             <p>Smile Cold</p>
           </div>
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/UCtgX3BoLQQ/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/UCtgX3BoLQQ/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/UCtgX3BoLQQ/hqdefault.jpg'" alt="">
             <p>VIPS Commercial</p>
           </div>
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/PatQdA8eSr8/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/PatQdA8eSr8/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/PatQdA8eSr8/hqdefault.jpg'" alt="">
             <p>Trailer Cut</p>
           </div>
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/IWvJeOoBqCo/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/IWvJeOoBqCo/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/IWvJeOoBqCo/hqdefault.jpg'" alt="">
             <p>Sports</p>
           </div>
-          <div class="rail-item"><img src="https://i.ytimg.com/vi/H5ZV1TY-Xrc/hqdefault.jpg" alt="">
+          <div class="rail-item"><img src="https://i.ytimg.com/vi/H5ZV1TY-Xrc/maxresdefault.jpg" onerror="this.onerror=null;this.src='https://i.ytimg.com/vi/H5ZV1TY-Xrc/hqdefault.jpg'" alt="">
             <p>Moving</p>
           </div>
         </div>
